--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "discord",
     "musicbot"
   ],
-  "author": "blacky",
+  "author": "Dragneel | SOURAV",
   "license ": "MIT",
   "bugs": "",
   "homepage": "",
